Minor changes to question 7

--- a/question_7.ipynb
+++ b/question_7.ipynb
@@ -47,6 +47,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "environmental-steps",
+   "metadata": {},
+   "source": [
+    "Please note that for the derivation for the equations to convert indices to coordinates and coordinates to indice in the n-dimensional case, please refer to the answer sheet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "accomplished-physiology",
    "metadata": {},
    "source": [
@@ -58,7 +66,7 @@
    "id": "gentle-phoenix",
    "metadata": {},
    "source": [
-    "Please note that the library `os` has only been noted to facilitate directory navigation and file I/O and has no contribution whatsoever in the derivation of the code for the solution."
+    "Please note that the library `os` has only been noted to facilitate directory navigation and file input/output and has no contribution whatsoever in the derivation of the code for the solution."
    ]
   },
   {
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "rocky-external",
    "metadata": {},
    "outputs": [],
@@ -171,18 +179,18 @@
     "    \n",
     "    n1 = len(ndim) - 1\n",
     "\n",
-    "    while n1 > 0:\n",
+    "    while n1 > 0:               \n",
     "        \n",
     "        mult = 1\n",
     "        \n",
     "        n2 = n1-1\n",
     "        \n",
     "        while n2 > -1:\n",
-    "            mult *= ndim[n2]\n",
+    "            mult *= ndim[n2]     # product of the dimension lengths of all the dimensions coming before n1\n",
     "            n2 -= 1\n",
     "        \n",
-    "        coord[n1]= index // mult\n",
-    "        index = index % mult\n",
+    "        coord[n1]= index // mult # floor division\n",
+    "        index = index % mult     # getting the remainder of the division of the index by mult\n",
     "        n1 -= 1\n",
     "\n",
     "    else:\n",
