Some more changes to question 7

--- a/question_7.ipynb
+++ b/question_7.ipynb
@@ -47,10 +47,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "environmental-steps",
+   "id": "intimate-clerk",
    "metadata": {},
    "source": [
-    "Please note that for the derivation for the equations to convert indices to coordinates and coordinates to indice in the n-dimensional case, please refer to the answer sheet."
+    "Please note that for the derivation for the equations to convert indices to coordinates and coordinates to indices in the n-dimensional case, please refer to the answer sheet."
    ]
   },
   {
