--- a/answer-sheet.Rmd
+++ b/answer-sheet.Rmd
@@ -121,7 +121,7 @@ For converting from index to coordinates in the $n$-dimensional case, we first n
 
 
 $$
-x_n = \floor{\frac{index}{\prod_{k=1}^{n-1}L_k}} = x_n = \floor{\frac{index}{p_{n-1}}}
+x_n = \floor{\frac{index}{\prod_{k=1}^{n-1}L_k}} = \floor{\frac{index}{p_{n-1}}}
 $$
 
 Then, the coordinates of the subsequent dimensions (n-1 to 1) have to be found in a step-by-step manner.
